--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,6 +18,10 @@
   </head>
 
   <body>
+    <inno-paginator count="15"></inno-paginator>
+    <div style="background-color:black">
+    <inno-paginator variant="dark" count="15"></inno-paginator>
+  </div>
     <inno-modal id="innomodal1">
       <inno-modal-header>Modal title</inno-modal-header>
       <inno-modal-content style="color: white; padding: 20px">This is a non-critical modal</inno-modal-content>
