fixing default paginator color for light

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <inno-paginator count="15"></inno-paginator>
+    <inno-paginator page-count="15"></inno-paginator>
     <div style="background-color:black">
-    <inno-paginator variant="dark" count="15"></inno-paginator>
+    <inno-paginator variant="dark" page-count="15"></inno-paginator>
   </div>
     <inno-modal id="innomodal1">
       <inno-modal-header>Modal title</inno-modal-header>
