--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,6 +18,11 @@
   </head>
 
   <body>
+    <div class="inno-main-grid rows-3">
+      <div class="inno-full-content"> Main-grid </div>
+      <div class="inno-content-grid">
+        <div class="inno-full-content"><div>content grid</div></div></div>
+    </div>
     <inno-paginator page-count="15"></inno-paginator>
     <div style="background-color:black">
     <inno-paginator variant="dark" page-count="15"></inno-paginator>
