--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -463,7 +463,10 @@
 
     <div style="display: flex; flex-direction: column; gap: 10px; padding: 10px">
       <inno-status-message id="msg1111" message-type="info"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod. </inno-status-message>
-      <inno-status-message message-type="warning">message</inno-status-message>
+      <inno-status-message message-type="warning">
+        <span style="font-weight: bold">Warning:</span>
+        <span>long long long long long long2 long2 long2 message</span>
+      </inno-status-message>
       <inno-status-message message-type="error">message</inno-status-message>
       <inno-status-message message-type="success">message</inno-status-message>
     </div>
@@ -472,7 +475,7 @@
       <inno-status-message theme="dark" message-type="info">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod.</inno-status-message>
       <inno-status-message theme="dark" message-type="warning">message</inno-status-message>
       <inno-status-message theme="dark" message-type="error">message</inno-status-message>
-      <inno-status-message theme="dark" message-type="success" auto-close>message</inno-status-message>
+      <inno-status-message theme="dark" message-type="success" show-progress>message</inno-status-message>
     </div>
   </body>
   <script>
