--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,6 +18,12 @@
   </head>
 
   <body>
+    <div>
+      <inno-date-picker-dropdown range></inno-date-picker-dropdown>
+      <!-- <inno-time-picker id="timepicker1"></inno-time-picker> -->
+      <!-- <inno-date-picker></inno-date-picker> -->
+    </div>
+
     <div class="inno-main-grid rows-3">
       <div class="inno-full-content">Main-grid</div>
       <div class="inno-content-grid">
@@ -556,5 +562,9 @@
         uploadDisabledText: 'File upload is disabled',
       };
     });
+
+    // document.getElementById('timepicker1').addEventListener('valueChange', event => {
+    //   console.log(event);
+    // });
   </script>
 </html>
