Add docs and cleanup

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div>
-      <inno-date-picker-dropdown range></inno-date-picker-dropdown>
+      <inno-date-picker-dropdown variant="light"></inno-date-picker-dropdown>
       <!-- <inno-time-picker id="timepicker1"></inno-time-picker> -->
       <!-- <inno-date-picker></inno-date-picker> -->
     </div>
