--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -57,7 +57,7 @@
     <span id="onhoverspan" style="background-color: black; color: white">tooltip on hover</span>
     <span id="manualspan" style="background-color: black; color: white">manual tooltip, click on the button --&gt;</span>
     <button id="manualbtn">click me!</button>
-    <inno-popover for="#onclickspan" placement="right" title-content="title">
+    <inno-popover for="#onclickspan" placement="right" popover-title="title">
       <p>
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
         Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
@@ -66,7 +66,7 @@
         erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
       </p>
     </inno-popover>
-    <inno-popover for="#onhoverspan" placement="bottom" trigger="hover" title-content="title" variant="light">
+    <inno-popover for="#onhoverspan" placement="bottom" trigger="hover" popover-title="title" variant="light">
       <p>
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
         Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
@@ -75,7 +75,7 @@
         erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
       </p>
     </inno-popover>
-    <inno-popover id="manualpop" for="#manualspan" placement="bottom" trigger="manual" title-content="title">
+    <inno-popover id="manualpop" for="#manualspan" placement="bottom" trigger="manual" popover-title="title">
       <p>
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
         Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
