Update docs, cleanup

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -19,9 +19,9 @@
 
   <body>
     <div>
-      <inno-date-picker-dropdown variant="light"></inno-date-picker-dropdown>
+      <!-- <inno-date-picker-dropdown variant="light"></inno-date-picker-dropdown> -->
       <!-- <inno-time-picker id="timepicker1"></inno-time-picker> -->
-      <!-- <inno-date-picker></inno-date-picker> -->
+      <inno-date-picker></inno-date-picker>
     </div>
 
     <div class="inno-main-grid rows-3">
