Refactor date-picker calculation logic, add outer-month style

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -21,7 +21,7 @@
     <div>
       <!-- <inno-date-picker-dropdown variant="light"></inno-date-picker-dropdown> -->
       <!-- <inno-time-picker id="timepicker1"></inno-time-picker> -->
-      <inno-date-picker></inno-date-picker>
+      <inno-date-picker week-start-index="6"></inno-date-picker>
     </div>
 
     <div class="inno-main-grid rows-3">
