--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,11 +18,25 @@
   </head>
 
   <body>
-    <div>
-      <!-- <inno-date-picker-dropdown variant="light"></inno-date-picker-dropdown> -->
-      <!-- <inno-time-picker id="timepicker1"></inno-time-picker> -->
-      <inno-date-picker></inno-date-picker>
-    </div>
+    <inno-table-base>
+      <table>
+        <thead>
+          <tr><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th></tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>cellhead</th>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+          </tr>
+          <tr>
+            <th>Lorem ipsum</th>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+          </tr>
+        </tbody>
+      </table>
+    </inno-table-base>
 
     <div class="inno-main-grid rows-3">
       <div class="inno-full-content">Main-grid</div>
