basic table wrapper component

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,14 +18,16 @@
   </head>
 
   <body>
-    <inno-table-base>
+    <inno-table-base style="width:600px">
       <table>
         <thead>
-          <tr><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th></tr>
+          <tr><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th></tr>
         </thead>
         <tbody>
           <tr>
             <th>cellhead</th>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
             <td>Lorem ipsum</td>
             <td>Lorem ipsum</td>
           </tr>
@@ -33,7 +35,17 @@
             <th>Lorem ipsum</th>
             <td>Lorem ipsum</td>
             <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
           </tr>
+          <tr>
+            <th>cellhead</th>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+            <td>Lorem ipsum</td>
+          </tr>
+
         </tbody>
       </table>
     </inno-table-base>
