--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -453,8 +453,11 @@
 
     <div style="position: relative; width: 100%; display: block; background-color: #08191f; padding: 20px; margin-top: 20px">
       <inno-tab layout="stretched" theme="dark" always-emphasized>
-        <inno-tab-item>Tab item 1</inno-tab-item>
-        <inno-tab-item>Tab item 2</inno-tab-item>
+        <inno-tab-item postfix-icon="help">Tab item 1</inno-tab-item>
+        <inno-tab-item>
+          <span>Tab item 2</span>
+          <inno-icon icon="help" size="32"></inno-icon>
+        </inno-tab-item>
         <inno-tab-item>Tab item 3</inno-tab-item>
         <inno-tab-item>Tab item 4</inno-tab-item>
         <inno-tab-item>Tab item 5</inno-tab-item>
@@ -464,7 +467,7 @@
     <div style="position: relative; width: 100%; display: block; background-color: white; padding: 20px; margin-top: 20px">
       <inno-tab layout="auto" theme="light">
         <inno-tab-item>Tab item 1</inno-tab-item>
-        <inno-tab-item disabled>Tab item 2</inno-tab-item>
+        <inno-tab-item>Tab item 2</inno-tab-item>
         <inno-tab-item>Tab item 3</inno-tab-item>
         <inno-tab-item>Tab item 4</inno-tab-item>
         <inno-tab-item>Tab item 5</inno-tab-item>
@@ -495,8 +498,8 @@
 
     <div style="position: relative; width: 100%; display: block; background-color: #e1f000; padding: 20px; margin-top: 20px">
       <inno-tab layout="stretched" theme="light" always-emphasized>
-        <inno-tab-item>Tab item 1</inno-tab-item>
-        <inno-tab-item disabled>Tab item 2</inno-tab-item>
+        <inno-tab-item postfix-icon="help">Tab item 1</inno-tab-item>
+        <inno-tab-item>Tab item 2</inno-tab-item>
         <inno-tab-item>Tab item 3</inno-tab-item>
         <inno-tab-item>Tab item 4</inno-tab-item>
         <inno-tab-item>Tab item 5</inno-tab-item>
