Add minimal decorator to inno-tab

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -452,7 +452,7 @@
     </div>
 
     <div style="position: relative; width: 100%; display: block; background-color: #08191f; padding: 20px; margin-top: 20px">
-      <inno-tab layout="stretched" theme="dark" always-emphasized>
+      <inno-tab layout="stretched" theme="dark" always-emphasized minimal-decorator>
         <inno-tab-item postfix-icon="help">Tab item 1</inno-tab-item>
         <inno-tab-item>
           <span>Tab item 2</span>
