Inno-date-picker-dropdown: close if value if selected, change width dynamically, fix and cleanup focus

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <inno-date-picker-dropdown></inno-date-picker-dropdown>
     <inno-table-base style="width: 600px">
       <table>
         <thead>
