inno-date-picker focus cleanup, inno-input textarea clenaup

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -17,36 +17,7 @@
     </style>
   </head>
   <body>
-    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
-      <inno-input label="name" variant="dark" resizeable="true">
-        <textarea readonly>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, sint omnis impedit possimus perferendis repellendus commodi ea atque ratione deserunt, rerum in dolore aperiam reprehenderit aliquam blanditiis sed fugit sunt?
-Tempore culpa alias voluptas similique fuga. Facere perferendis quis nisi esse eligendi adipisci facilis perspiciatis delectus id beatae accusantium doloremque ratione corporis repellat libero sed nam, nemo in dolores culpa.
-Quaerat fugiat libero blanditiis nulla ipsam facere beatae quam sapiente dolores quos? Animi optio dolorem ex, obcaecati impedit error amet quaerat fugit debitis perspiciatis maxime praesentium deserunt distinctio minima pariatur?
-Architecto molestiae perspiciatis quos maxime provident nostrum neque nobis, accusamus quas ipsam iure temporibus, quaerat enim deserunt nesciunt hic. Iure veritatis cupiditate distinctio temporibus! Blanditiis quam molestiae exercitationem labore ratione?
-Ea odit numquam inventore aperiam earum, beatae tempora aliquid maiores reprehenderit labore aut deleniti quam, consequatur veritatis minus quia ab, corrupti recusandae suscipit quis deserunt. In officia consequuntur fuga nobis.
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi soluta odio veniam nobis, laborum repellendus assumenda, eius iusto, ipsum ad sit ipsa asperiores laudantium quis similique! Libero culpa eum velit.
-Distinctio soluta, laboriosam vel non fuga, recusandae facere nesciunt sunt quo quisquam quod blanditiis excepturi. Temporibus tenetur quo consectetur dolorem ullam accusantium, optio tempore! Eum voluptatum corrupti distinctio reprehenderit quam.
-Dolor libero natus ut sint quis error nostrum aperiam animi voluptates reprehenderit repellendus impedit modi fugit debitis pariatur, ad exercitationem excepturi ipsum iusto? Blanditiis eius, sit repudiandae facere sunt dolorem?
-Impedit voluptatibus vero incidunt ullam odit earum! Praesentium vero magnam velit recusandae id facilis, deleniti sint numquam officia dolorem modi quisquam dolor provident minus iure rem neque qui repellat. Culpa!
-Unde eligendi quisquam quibusdam tempora minus, voluptatibus id incidunt nemo vero qui cumque explicabo eius repudiandae, nobis saepe. Totam accusamus explicabo quos odit? Repellendus officiis, cum culpa necessitatibus nesciunt atque.
-Corrupti, consequatur quo amet eveniet ipsa, ad sint doloribus numquam provident dolorem deserunt. Aliquid autem quisquam quis temporibus, nam iure repellat quod nemo laudantium? Fugit quas accusamus sunt quasi quos!
-Et error repellendus nihil alias expedita deleniti natus explicabo iusto cum aut officia quasi inventore laboriosam reprehenderit nisi accusantium, vero repellat id? Labore autem nemo, eum dolore odit explicabo quidem.
-Ad vero saepe sapiente consequatur. Deserunt, asperiores deleniti! Suscipit sunt tempore harum voluptatum quae eveniet voluptatibus similique quia ipsum quos autem numquam laudantium animi illo deserunt temporibus eius, a corrupti?
-Eos qui voluptatum porro sit amet magnam aliquid esse incidunt quod soluta, doloremque suscipit eveniet temporibus sequi atque ipsum nesciunt possimus maxime necessitatibus voluptatem illo libero mollitia quos totam. Doloremque?
-Officia dignissimos impedit expedita autem, aperiam dolor a. Maxime dignissimos nam non dicta ex. Dolores omnis ducimus incidunt quibusdam accusantium voluptatibus repellat. Incidunt quas labore, corporis eos ex consectetur tempora?
-      </textarea
-        >
-      </inno-input>
-    </div>
-
-    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
-      <inno-input variant="dark" label="my label">
-        <input type="text" readonly value="example text" />
-      </inno-input>
-    </div>
-
-    <inno-date-picker-dropdown></inno-date-picker-dropdown>
+    <inno-date-picker-dropdown close-on-selection="false"></inno-date-picker-dropdown>
     <inno-table-base style="width: 600px">
       <table>
         <thead>
