Fixed label for icon driven select.

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -254,7 +254,7 @@
       <inno-select-item value="124" label="Hello"></inno-select-item>
       <inno-select-item value="124321" label="Bello"></inno-select-item>
     </inno-select>
-    <inno-select label="SelectIcon" icon="home">
+    <inno-select label="label for icon driven select placeholder" icon="plus">
       <inno-select-item value="124" label="Hello" icon="home"></inno-select-item>
       <inno-select-item value="124321" label="Bello" icon="back"></inno-select-item>
     </inno-select>
