Fixed modal backdrop closing in Chrome even if closeOnEscape is false.

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -64,7 +64,7 @@
     <div style="background-color: black">
       <inno-paginator variant="dark" page-count="15"></inno-paginator>
     </div>
-    <inno-modal id="innomodal1">
+    <inno-modal id="innomodal1" close-on-backdrop-click="false" close-on-escape="false">
       <inno-modal-header>Modal title</inno-modal-header>
       <inno-modal-content style="color: white">
         <form id="formu">
