--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -17,6 +17,22 @@
     </style>
   </head>
   <body>
+    <div style="max-width: 700px; min-width: 200px;">
+
+      <inno-input label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="light">
+        <input id="name" name="name" type="text" />
+        <inno-error type="badInput">Not valid</inno-error>
+      </inno-input>
+      <inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM">
+        <inno-select-item value="124" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM1" can-favorite="true"></inno-select-item>
+        <inno-select-item value="124321" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM2" can-favorite="true"></inno-select-item>
+      </inno-select>
+      <inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" icon="plus">
+        <inno-select-item value="124" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM1" icon="home" can-favorite="true"></inno-select-item>
+        <inno-select-item value="124321" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM2" icon="back" can-favorite="true"></inno-select-item>
+      </inno-select>
+    </div>
+
     <inno-date-picker-dropdown close-on-selection="false"></inno-date-picker-dropdown>
     <inno-table-base style="width: 600px">
       <table>
