--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -24,12 +24,33 @@
         <inno-error type="badInput">Not valid</inno-error>
       </inno-input>
       <inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM">
-        <inno-select-item value="124" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM1" can-favorite="true"></inno-select-item>
-        <inno-select-item value="124321" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM2" can-favorite="true"></inno-select-item>
-      </inno-select>
-      <inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" icon="plus">
-        <inno-select-item value="124" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM1" icon="home" can-favorite="true"></inno-select-item>
-        <inno-select-item value="124321" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM2" icon="back" can-favorite="true"></inno-select-item>
+        <inno-select-item value="1" label="1" can-favorite="true"></inno-select-item>
+        <inno-select-item value="2" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="3" label="3" can-favorite="true"></inno-select-item>
+        <inno-select-item value="4" label="4" can-favorite="true"></inno-select-item>
+        <inno-select-item value="5" label="5" can-favorite="true"></inno-select-item>
+        <inno-select-item value="6" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="7" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="11" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="12" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="13" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="14" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="15" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="16" label="21" can-favorite="true"></inno-select-item>
+        <inno-select-item value="17" label="22" can-favorite="true"></inno-select-item>
+        <inno-select-item value="18" label="23" can-favorite="true"></inno-select-item>
+        <inno-select-item value="19" label="24" can-favorite="true"></inno-select-item>
+        <inno-select-item value="20" label="25" can-favorite="true"></inno-select-item>
+        <inno-select-item value="21" label="26" can-favorite="true"></inno-select-item>
+        <inno-select-item value="22" label="27" can-favorite="true"></inno-select-item>
+        <inno-select-item value="23" label="28" can-favorite="true"></inno-select-item>
+        <inno-select-item value="24" label="29" can-favorite="true"></inno-select-item>
+        <inno-select-item value="25" label="12" can-favorite="true"></inno-select-item>
+        <inno-select-item value="26" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item value="27" label="32" can-favorite="true"></inno-select-item>
       </inno-select>
     </div>
 
