--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -227,27 +227,27 @@
           </div>
           <div style="background-color: white; padding: 15px">
             <span style="display: block; margin-bottom: 25px; color: black">disabled light background</span>
-            <inno-button variant="primary" disabled icon="cogwheel" icon-position="left" color-variant="dark">primary button</inno-button>
-            <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left" color-variant="dark">secondary button</inno-button>
-            <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left" color-variant="dark">tertiary button</inno-button>
-            <inno-button variant="primary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
-            <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
-            <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="primary" disabled icon="settings" icon-position="left" color-variant="dark">primary button</inno-button>
+            <inno-button variant="secondary" disabled icon="settings" icon-position="left" color-variant="dark">secondary button</inno-button>
+            <inno-button variant="tertiary" disabled icon="settings" icon-position="left" color-variant="dark">tertiary button</inno-button>
+            <inno-button variant="primary" disabled icon="settings" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="secondary" disabled icon="settings" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="tertiary" disabled icon="settings" icon-only="true" color-variant="dark"></inno-button>
           </div>
           <div style="background-color: #08191f; padding: 15px">
             <span style="display: block; margin-bottom: 25px; color: white">disabled dark background</span>
-            <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
-            <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
-            <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
-            <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
-            <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
-            <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
+            <inno-button variant="primary" disabled icon="settings" icon-position="left">primary button</inno-button>
+            <inno-button variant="secondary" disabled icon="settings" icon-position="left">secondary button</inno-button>
+            <inno-button variant="tertiary" disabled icon="settings" icon-position="left">tertiary button</inno-button>
+            <inno-button variant="primary" disabled icon="settings" icon-only="true"></inno-button>
+            <inno-button variant="secondary" disabled icon="settings" icon-only="true"></inno-button>
+            <inno-button variant="tertiary" disabled icon="settings" icon-only="true"></inno-button>
           </div>
         </div>
         <h1>media buttons</h1>
         <div style="display: flex; flex-direction: row; gap: 40px">
-          <inno-button variant="media" icon="search"></inno-button>
-          <inno-button variant="media" icon="search" disabled></inno-button>
+          <inno-button variant="media" icon-font="e913"></inno-button>
+          <inno-button variant="media" icon-font="e913" disabled></inno-button>
         </div>
         <h1>navigation buttons</h1>
         <div style="display: flex; flex-direction: row; gap: 40px">
