Icon font support for inno-select and inno-select-item.

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -23,14 +23,14 @@
         <input id="name" name="name" type="text" />
         <inno-error type="badInput">Not valid</inno-error>
       </inno-input>
-      <inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM">
-        <inno-select-item value="1" label="1" can-favorite="true"></inno-select-item>
-        <inno-select-item value="2" label="2" can-favorite="true"></inno-select-item>
-        <inno-select-item value="3" label="3" can-favorite="true"></inno-select-item>
-        <inno-select-item value="4" label="4" can-favorite="true"></inno-select-item>
-        <inno-select-item value="5" label="5" can-favorite="true"></inno-select-item>
-        <inno-select-item value="6" label="2" can-favorite="true"></inno-select-item>
-        <inno-select-item value="7" label="2" can-favorite="true"></inno-select-item>
+      <inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM">
+        <inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+        <inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
         <inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
         <inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
         <inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
