--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -43,7 +43,8 @@
 		<input id="name" name="name" type="text" />
 		<inno-error type="badInput">Not valid</inno-error>
 	</inno-input>
-	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM">
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="light"
+		disabled>
 		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
 		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
 		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
@@ -54,24 +55,149 @@
 		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
 		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
 		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="11" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="12" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="13" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="14" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="15" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="16" label="21" can-favorite="true"></inno-select-item>
-		<inno-select-item value="17" label="22" can-favorite="true"></inno-select-item>
-		<inno-select-item value="18" label="23" can-favorite="true"></inno-select-item>
-		<inno-select-item value="19" label="24" can-favorite="true"></inno-select-item>
-		<inno-select-item value="20" label="25" can-favorite="true"></inno-select-item>
-		<inno-select-item value="21" label="26" can-favorite="true"></inno-select-item>
-		<inno-select-item value="22" label="27" can-favorite="true"></inno-select-item>
-		<inno-select-item value="23" label="28" can-favorite="true"></inno-select-item>
-		<inno-select-item value="24" label="29" can-favorite="true"></inno-select-item>
-		<inno-select-item value="25" label="12" can-favorite="true"></inno-select-item>
-		<inno-select-item value="26" label="2" can-favorite="true"></inno-select-item>
-		<inno-select-item value="27" label="32" can-favorite="true"></inno-select-item>
 	</inno-select>
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="light"
+		disabled value="1">
+		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary">
+		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary"
+		value="1">
+		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary">
+		<inno-select-item value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item value="6" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary"
+		disabled>
+		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary"
+		disabled value="1">
+		<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary" disabled value="1">
+		<inno-select-item value="1" label="1" can-favorite="true"></inno-select-item>
+		<inno-select-item value="2" label="2" can-favorite="true"></inno-select-item>
+		<inno-select-item value="3" label="3" can-favorite="true"></inno-select-item>
+		<inno-select-item value="4" label="4" can-favorite="true"></inno-select-item>
+		<inno-select-item value="5" label="5" can-favorite="true"></inno-select-item>
+		<inno-select-item value="6" label="2" can-favorite="true"></inno-select-item>
+	</inno-select>
+	<div style="background-color: #08191f; padding: 20px;">
+		<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="dark"
+			disabled>
+			<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+		</inno-select>
+		<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="dark"
+			disabled value="1">
+			<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+		</inno-select>
+		<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary"
+			disabled disabled-background-color="dark">
+			<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+		</inno-select>
+		<inno-select icon-font="e911" label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary"
+			disabled disabled-background-color="dark" value="1">
+			<inno-select-item icon-font="e946" value="1" label="1" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="2" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="3" label="3" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="4" label="4" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="5" label="5" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e946" value="6" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item icon-font="e913" value="7" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="8" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="9" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="10" label="2" can-favorite="true"></inno-select-item>
+		</inno-select>
+		<inno-select label="MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM" variant="primary" disabled
+			disabled-background-color="dark" value="1">
+			<inno-select-item value="1" label="1" can-favorite="true" selected></inno-select-item>
+			<inno-select-item value="2" label="2" can-favorite="true"></inno-select-item>
+			<inno-select-item value="3" label="3" can-favorite="true"></inno-select-item>
+			<inno-select-item value="4" label="4" can-favorite="true"></inno-select-item>
+			<inno-select-item value="5" label="5" can-favorite="true"></inno-select-item>
+			<inno-select-item value="6" label="2" can-favorite="true"></inno-select-item>
+		</inno-select>
 	</div>
 
 	<inno-date-picker-dropdown close-on-selection="false"></inno-date-picker-dropdown>
